--- a/app/views/home/announcements.html.erb
+++ b/app/views/home/announcements.html.erb
@@ -1,4 +1,4 @@
-<div id="timeline" class="mx-n3 mx-sm-n4 mx-md-0">
+<div id="timeline" class="mx-n3 mx-md-0">
 	<!-- <div class="col"> -->
 		<%= render partial: 'alert', collection: alerts_for_current_schedule %>
 	<!-- </div> -->
