--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -31,8 +31,15 @@ body.page #content, body.home #content
 	}
 }
 
-@media (max-width: 767.98px) {
-	#markdown-toc { display:none; }
+@media (max-width: 992.98px)
+{
+	#markdown-toc
+	{
+		float:none;
+		position:static;
+		padding:0;
+		border-left:none;
+	}
 }
 
 
