--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -33,7 +33,7 @@ body.page #content, body.home #content
 
 @media (max-width: 992.98px)
 {
-	#markdown-toc
+	#content #markdown-toc
 	{
 		float:none;
 		position:static;
