--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -11,7 +11,7 @@ body.page #content, body.home #content
 	
 }
 
-#content #markdown-toc
+.room-for-toc #content #markdown-toc
 {
 	margin-top:3em;
 	width:12rem;
@@ -33,7 +33,7 @@ body.page #content, body.home #content
 
 @media (max-width: 992.98px)
 {
-	#content #markdown-toc
+	.room-for-toc #content #markdown-toc
 	{
 		float:none;
 		position:static;
