--- a/app/views/submits/show.js.erb
+++ b/app/views/submits/show.js.erb
@@ -1,2 +1,4 @@
 document.getElementById('modal-browser-header').innerHTML = "<%= j(render 'title') %>";
 document.getElementById('modal-browser-body').innerHTML = "<%= j(render object: @submit, partial: 'tabs') %>";
+enableTooltips();
+startAutosave();
