--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -1,27 +1,7 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<%= csrf_meta_tags %>
-
-	<title><%= title %></title>
-
-	<%= stylesheet_link_tag    "application", :media => "all" %>
-	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-	<%= javascript_include_tag "application" %>
-
-    <link rel="icon" type="image/png" href="/images/minor.png" />
-</head>
-
-<body>
-	<div class="container" style="margin-top:2em;">
+<% content_for :content do %>
+<div class="container" style="margin-top:2em;">
 	<%= yield %>
-	</div>
-</body>
-
-</html>
+</div>
+<%= render 'footer' %>
+<% end %>
+<%= render template: "layouts/application" %>
