--- a/app/views/application/_brand.html.erb
+++ b/app/views/application/_brand.html.erb
@@ -1,6 +1,6 @@
 <%# min-width:0 is to allow the div to dictate the width for flexboxed children %>
-<a href="/" class="navbar-brand d-flex align-items-center mr-auto fw-bold" style="min-width:0;">
-	
+<a href="/" class="navbar-brand d-flex align-items-center mr-auto fw-bold flex-fill flex-lg-shrink-0" style="min-width:0;">
+
 	<%= bootstrap_icon "terminal", class: "pull-left rounded mr-2 flex-shrink-0 p-1 d-none d-md-block", width:32, height:32, style: 'vertical-align:bottom;' %>
 
 	<div id="course-title" class="d-flex flex-column text-truncate">
