--- a/app/views/layouts/hands.html.erb
+++ b/app/views/layouts/hands.html.erb
@@ -5,7 +5,7 @@
 			<%= form_tag(hands_path, method: 'get', class: 'form mt-3') do %>
 			<div class="input-group">
 				<div class="input-group">
-					<a class="btn btn-secondary" href="<%= hands_path %>"><%= bootstrap_icon 'chevron-left' %></a>
+					<a class="btn btn-primary" href="<%= hands_path %>"><%= bootstrap_icon 'chevron-left' %></a>
 					<input type="text" class="form-control" placeholder="Search" name="term" id="term" required>
 					<button class="btn btn-primary" type="submit"><%= bootstrap_icon 'search' %></button>
 				</div>
