remove striped for performance

--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -1,4 +1,4 @@
-<table id="grade-table" class="table table-sm table-striped table-responsive">
+<table id="grade-table" class="table table-sm table-responsive">
 
 	<tr>
 		<th>Name</th>
