--- a/app/views/welcome/clone.html.erb
+++ b/app/views/welcome/clone.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="m-5 bg-light p-5 border">
 	<h1>Set git repo</h1>
 	<%= render partial: 'admin/site/git' %>
 </div>
