--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @alert) do |f| %>
+<%= form_with(model: @alert, local: false) do |f| %>
 
 <% if @alert.errors.any? %>
 <div id="error_explanation">
