--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -1,6 +1,6 @@
 <% if current_user.admin? %>
 
-<% if current_user.accessible_schedules.any? %>
+<% if current_schedule.present? %>
 <%= menu_group current_schedule.name do %>
 	<%= menu_link 'Overview', overview_path, icon: 'columns' %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen' %>
