--- a/app/views/admin/site/_permissions.html.erb
+++ b/app/views/admin/site/_permissions.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Edit permissions', admin_users_path, remote: true, class: 'btn btn-primary' %>
+<%= link_to 'Edit permissions', admin_users_path, class: 'btn btn-primary' %>
