--- a/app/views/alerts/_index.html.erb
+++ b/app/views/alerts/_index.html.erb
@@ -3,8 +3,8 @@
   <div class="card-body">
     <h5 class="card-title"><%= alert.title %> <% if alert.published %><span class="badge bg-secondary">Published</span><% end %></h5>
     <p class="card-text"><%= alert.body %></p>
-	<%= link_to 'Edit', edit_alert_path(alert), class: 'card-link' %>
-	<%= link_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' }, class: 'card-link' %>
+	<%= link_to 'Edit', edit_alert_path(alert), class: 'btn btn-link' %>
+	<%= button_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-link' %>
   </div>
 </div>
 <% end %>
