--- a/app/views/application/_modal_browser.html.erb
+++ b/app/views/application/_modal_browser.html.erb
@@ -1,10 +1,11 @@
 <div id="modal-browser" class="modal" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-dialog-scrollable modal-lg modal-fullscreen-sm-down" role="document">
 		<div class="modal-content">
-			<div id="modal-browser-header" class="modal-header align-items-start">
-			</div>
-			<div id="modal-browser-body" class="modal-body">
-			</div>
+				<!--div id="modal-browser-header" class="modal-header align-items-start">
+				</div-->
+				<div id="modal-browser-body" class="modal-body">
+					<turbo-frame id="modal"></turbo-frame>
+				</div>
 		</div>
 	</div>
 </div>
