--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Alerts</h1>
-
-<%= render partial: 'index' %>
+	<h1>Announcements</h1>
+	<% if notice.present? %><div class="alert alert-success mb-3"><%= notice %></div><% end %>
+	<%= render partial: 'index' %>
