--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -1,6 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<%= render partial: 'show' %>
-
-<%= link_to 'Edit', edit_alert_path(@alert) %> |
-<%= link_to 'Back', alerts_path %>
+	<%= render partial: 'show' %>
+	<% if notice.present? %><div class="alert alert-success mb-3"><%= notice %></div><% end %>
+	<%= link_to 'Edit', edit_alert_path(@alert) %> |
+	<%= link_to 'Back', alerts_path %>
