--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 	<%= javascript_include_tag 'https://polyfill.io/v3/polyfill.min.js?features=es6' %>
 	<%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js', { async: true, id: 'MathJax-script' } %>
 	<% end %>
+	<%= turbo_include_tags %>
 
 	<link rel="icon" type="image/png" href="/images/minor.png" />
 
