--- a/app/views/submits/_title.html.erb
+++ b/app/views/submits/_title.html.erb
@@ -1,5 +1,5 @@
 <div class="w-100">
-	<h5><%= link_to_if current_user.senior?, @submit.user_name, @submit.user, remote: true %> / <%= @submit.pset_name %></h5>
+	<h5><%= link_to_if current_user.senior?, @submit.user_name, @submit.user %> / <%= @submit.pset_name %></h5>
 	<%= render partial: 'submits/info' %>
 	<ul class="nav nav-tabs mt-3 mb-n3 border-bottom-0" id="submit_tab" role="tablist">
 		<li class="nav-item">
